# nba_player_stats

./: README.md  get_player_stats.py  pyproject.toml  requirements.txt  setup.cfg
src/: get_player_stats.py
