[metadata]
name = nba_player_stats
version = 0.0.1
description = View NBA player stats in the terminal
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = src
install_requires =
    requests>"2.28"
    rich>"12.5"
    pandas>"1.5"
    lxml>"4.8"

[options.entry_points]
console_scripts =
    nba = src.get_player_stats:main
